examples/type_system/failing/127_match_missing_arrow.flx
let x = match 1 {
    0 1,
    _ -> 0
}

let after = 42
